Added Routines endpoint and swagger comments
